--- a/app/uploads/questions/question1.html
+++ b/app/uploads/questions/question1.html
@@ -1,66 +1,214 @@
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <title>アンケート</title>
+    <style>
+      /* ラジオボタンを非表示 */
+      input[type="radio"] {
+        display: none;
+      }
 
-    <!DOCTYPE html>
-    <html lang="ja">
-    <head>
-      <meta charset="UTF-8">
-      <title>アンケート</title>
-    </head>
-    <body>
-      <div class="questions" id="6787a81ad44f67816133b2a3">
-  
-      <div class="question" id="1">
-    <h2>質問: 1</h2>
-<textarea id="textarea_1"></textarea>
-</div>
-      <div class="question" id="2">
-    <h2>質問: 2</h2>
-<input name="undefined" id="checkbox_1" type="checkbox" value="項目1">項目1
-<input name="undefined" id="checkbox_2" type="checkbox" value="項目2">項目2
-<input name="undefined" id="checkbox_3" type="checkbox" value="項目3">項目3
-</div>
-        <button id="submitButton">回答</button>
-        </div><script>
+      /* カスタムラベルのスタイル */
+      .custom-radio {
+        display: inline-block;
+        padding: 10px 20px;
+        border: 2px solid #ccc;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+        text-align: center;
+        margin: 5px;
+      }
+
+      /* 選択時のスタイル */
+      input[type="radio"]:checked + .custom-radio {
+        background-color: #4caf50;
+        color: white;
+        border-color: #4caf50;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="questions" id="678c66434e3455d377d53523">
+      <h1 id="question_title">飲みかい日程</h1>
+    </div>
+
+    <div class="question" id="1">
+      <h2>12/1</h2>
+
+      <input type="radio" id="12/1_circle" name="12/1" value="〇" />
+      <label for="12/1_circle" class="custom-radio">〇</label>
+
+      <input type="radio" id="12/1_triangle" name="12/1" value="△" />
+      <label for="12/1_triangle" class="custom-radio">△</label>
+
+      <input type="radio" id="12/1_x" name="12/1" value="×" />
+      <label for="12/1_x" class="custom-radio">×</label>
+    </div>
+    <div class="question" id="2">
+      <h2>12/2</h2>
+
+      <input type="radio" id="12/2_circle" name="12/2" value="〇" />
+      <label for="12/2_circle" class="custom-radio">〇</label>
+
+      <input type="radio" id="12/2_triangle" name="12/2" value="△" />
+      <label for="12/2_triangle" class="custom-radio">△</label>
+
+      <input type="radio" id="12/2_x" name="12/2" value="×" />
+      <label for="12/2_x" class="custom-radio">×</label>
+    </div>
+    <div class="question" id="3">
+      <h2>12/3</h2>
+
+      <input type="radio" id="12/3_circle" name="12/3" value="〇" />
+      <label for="12/3_circle" class="custom-radio">〇</label>
+
+      <input type="radio" id="12/3_triangle" name="12/3" value="△" />
+      <label for="12/3_triangle" class="custom-radio">△</label>
+
+      <input type="radio" id="12/3_x" name="12/3" value="×" />
+      <label for="12/3_x" class="custom-radio">×</label>
+    </div>
+    <div class="question" id="4">
+      <h2>12/4</h2>
+
+      <input type="radio" id="12/4_circle" name="12/4" value="〇" />
+      <label for="12/4_circle" class="custom-radio">〇</label>
+
+      <input type="radio" id="12/4_triangle" name="12/4" value="△" />
+      <label for="12/4_triangle" class="custom-radio">△</label>
+
+      <input type="radio" id="12/4_x" name="12/4" value="×" />
+      <label for="12/4_x" class="custom-radio">×</label>
+    </div>
+    <div class="question" id="5">
+      <h2>12/5</h2>
+
+      <input type="radio" id="12/5_circle" name="12/5" value="〇" />
+      <label for="12/5_circle" class="custom-radio">〇</label>
+
+      <input type="radio" id="12/5_triangle" name="12/5" value="△" />
+      <label for="12/5_triangle" class="custom-radio">△</label>
+
+      <input type="radio" id="12/5_x" name="12/5" value="×" />
+      <label for="12/5_x" class="custom-radio">×</label>
+    </div>
+    <div class="question" id="6">
+      <h2>12/6</h2>
+
+      <input type="radio" id="12/6_circle" name="12/6" value="〇" />
+      <label for="12/6_circle" class="custom-radio">〇</label>
+
+      <input type="radio" id="12/6_triangle" name="12/6" value="△" />
+      <label for="12/6_triangle" class="custom-radio">△</label>
+
+      <input type="radio" id="12/6_x" name="12/6" value="×" />
+      <label for="12/6_x" class="custom-radio">×</label>
+    </div>
+    <div class="question" id="7">
+      <h2>12/7</h2>
+
+      <input type="radio" id="12/7_circle" name="12/7" value="〇" />
+      <label for="12/7_circle" class="custom-radio">〇</label>
+
+      <input type="radio" id="12/7_triangle" name="12/7" value="△" />
+      <label for="12/7_triangle" class="custom-radio">△</label>
+
+      <input type="radio" id="12/7_x" name="12/7" value="×" />
+      <label for="12/7_x" class="custom-radio">×</label>
+    </div>
+    <div class="question" id="8">
+      <h2>12/8</h2>
+
+      <input type="radio" id="12/8_circle" name="12/8" value="〇" />
+      <label for="12/8_circle" class="custom-radio">〇</label>
+
+      <input type="radio" id="12/8_triangle" name="12/8" value="△" />
+      <label for="12/8_triangle" class="custom-radio">△</label>
+
+      <input type="radio" id="12/8_x" name="12/8" value="×" />
+      <label for="12/8_x" class="custom-radio">×</label>
+    </div>
+    <div class="question" id="9">
+      <h2>12/9</h2>
+
+      <input type="radio" id="12/9_circle" name="12/9" value="〇" />
+      <label for="12/9_circle" class="custom-radio">〇</label>
+
+      <input type="radio" id="12/9_triangle" name="12/9" value="△" />
+      <label for="12/9_triangle" class="custom-radio">△</label>
+
+      <input type="radio" id="12/9_x" name="12/9" value="×" />
+      <label for="12/9_x" class="custom-radio">×</label>
+    </div>
+
+    <textarea name="name" id="name" rows="4" cols="50"></textarea>
+    <button id="submitButton">回答</button>
+    <script>
       const questionId = document.getElementsByClassName("questions")[0].id;
+      const questionTitle = document.getElementById("question_title");
       const questionClass = document.getElementsByClassName("question");
       const submitButton = document.getElementById("submitButton");
       const resultText = document.getElementById("result");
+      
       let textarea;
       let textareaValue;
-  
-// JSONデータを構築
-      const data = {questionId: questionId,};
+
+      // JSONデータを構築
+      const data = {
+        questionId: questionId,
+        question_title: questionTitle.textContent,
+        answers: [],
+      };
       submitButton.addEventListener("click", async () => {
-        for (
-          let index = 0, answerId = 1;
-          index < questionClass.length;
-          index++, answerId++
-        ) {
+        const name = document.getElementById("name").value;
+        data.name = name
+        for (let index = 0; index < questionClass.length; index++) {
           // テキストエリアの値をデータに追加する
           if (questionClass[index].querySelector("textarea") !== null) {
-textarea = document.getElementById(`textarea_${index + 1}`);
-textareaValue = textarea.value;
-data[`textarea_${answerId}`] = textareaValue;
-}// checkboxの時にデータを追加する
-else if (questionClass[index].querySelector('input[type="checkbox"]') !==null) {
-  checkboxes = questionClass[index].querySelectorAll(
-    'input[type="checkbox"]'
-  );
-  selectedCheckboxes = Array.from(checkboxes)
-    .filter((checkbox) => checkbox.checked) // チェックされているものだけに絞る
-    .map((checkbox) => checkbox.value); // 値を取得
-  data[`checkbox_${answerId}`] = selectedCheckboxes;
-}
-  //radioButtonの時のデータを追加
-  // ラジオボタンの値をデータに追加する
-  else if (questionClass[index].querySelector('input[type="radio"]') !== null) {
-  const radios = questionClass[index].querySelectorAll('input[type="radio"]');
-    const selectedRadio = Array.from(radios).find((radio) => radio.checked); // チェックされているラジオボタンを取得
-    data[`radio_${answerId}`] = selectedRadio ? selectedRadio.value : null; // チェックされていない場合は null
-  }
-}
-console.log(data);
-// JSONとして送信
-try {
+            textarea = document.getElementById(`textarea_${index + 1}`);
+            textareaValue = textarea.value;
+            data.answers.push(textareaValue);
+          } // checkboxの時にデータを追加する
+          else if (
+            questionClass[index].querySelector('input[type="checkbox"]') !==
+            null
+          ) {
+            checkboxes = questionClass[index].querySelectorAll(
+              'input[type="checkbox"]'
+            );
+            selectedCheckboxes = Array.from(checkboxes)
+              .filter((checkbox) => checkbox.checked) // チェックされているものだけに絞る
+              .map((checkbox) => checkbox.value); // 値を取得
+            data.answers.push(selectedCheckboxes);
+          }
+          //radioButtonの時のデータを追加
+          // ラジオボタンの値をデータに追加する
+          else if (
+            questionClass[index].querySelector('input[type="radio"]') !== null
+          ) {
+            const radios = questionClass[index].querySelectorAll(
+              'input[type="radio"]'
+            );
+            const selectedRadio = Array.from(radios).find(
+              (radio) => radio.checked
+            ); // チェックされているラジオボタンを取得
+            data.answers.push(selectedRadio ? selectedRadio.value : null);
+          }
+        }
+        console.log(data);
+        // JSONとして送信
+
+        const nullValue = Object.entries(data)
+          .filter(([key, value]) => value === null)
+          .map(([key]) => key);
+        if (nullValue) {
+          nullValue.forEach((val) => {
+            console.log(val);
+          });
+        }
+        try {
           console.log("client inTry");
           await fetch("/answer", {
             method: "POST",
@@ -75,13 +223,13 @@ try {
               resultText.textContent = res.message;
             })
             .catch((err) => console.log(err));
+          // 配列を初期化
+          data.answers = [];
           console.log("client endTry");
         } catch (error) {
           console.error(error);
         }
-      }
-    );
-      </script>
-      </body>
-    </html>
-  
+      });
+    </script>
+  </body>
+</html>
